# seqlock.cpp

./: .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  build_benchmark.sh  build_gtest.sh  post.org  setup.sh  shell.nix
bindings-go/: README.md  ffi.h  go.mod  seqlock.go  seqlock_ffi.go  seqlock_ffi_test.go  seqlock_native.go  seqlock_native_test.go  seqlock_test.go  util.go
bindings-go/examples/: main.go
bindings/seqlock.go/: go.mod  seqlock_test.go
bindings/seqlock.go/examples/: main.go
cmake/: libbenchmark.cmake  libgtest.cmake  link_benchmark.cmake  setup_environment.cmake
docs/: blog.org
examples/: CMakeLists.txt  shm.cpp  writer.cpp
seqlock/: CMakeLists.txt  ffi.bm.cpp  ffi.cpp  ffi.test.cpp  seqlock.bm.cpp  seqlock.cpp  seqlock.test.cpp  spinlock.bm.cpp  spinlock.cpp  spinlock.test.cpp  util.cpp  util.test.cpp
seqlock/include/seqlock/: ffi.h  seqlock.hpp  spinlock.hpp  util.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
